--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -6,7 +6,7 @@
     content="width=device-width,
        initial-scale=1.0">
   <title>
-    Alumno Nuevo
+    Jugador
   </title>
   <script
     src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -29,7 +29,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Alumno Nuevo</h1>
+      <h1>Nuevo</h1>
       <div class="herramientas">
         <a
           href="alumnos.html">
@@ -48,7 +48,7 @@
     </p>
     <p>
       <label>
-        Nombre
+        Nombre o Nick
         <input name="nombre"
           type="text" required>
       </label>
@@ -62,14 +62,14 @@
     </p>
     <p>
       <label>
-        Grupo
+        Pasatiempo favorito
         <input name="grupo"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Fecha
+        Fecha de registro
         <input name="fecha"
           type="date" required>
       </label>
