--- a/juego.html
+++ b/juego.html
@@ -1,8 +1,58 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width,
-       initial-scale=1.0">
-  <title>Alumnos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css1/style.css">
+  
+  <title>KIDS+4</title>
+  
+</head>
+<body>
+  
+  <audio id="myAudio">
+    <source src="rechazo.mp3" type="audio/mpeg">
+  </audio>
+
+  <header>
+    <div class="container">
+      <div class="nav">
+        <h2><span><img src="img/Suma.png" width="250" height="100"></h2>
+        <nav>
+          <ul>
+            <li class="current"><a href="juego.html">SUMA</a></li>
+            <li><a href="res.html">RESTA</a></li>
+            <li><a href="mult.html">MULTIPLICACIÓN</a></li>
+            <li><a href="div.html">DIVISIÓN</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  
+  <div class="wrapper">
+      <div class="equation">
+        <h1  id="num1" style="color:#db4747"></h1>
+        <h1 style="color: #2AB7CA;">+</h1>
+        <h1  id="num2" style="color: #332472">1</h1>
+        <h1  style="color: #F86624">=</h1>
+        <h1  style="color: gray">?</h1>
+      </div>
+      <div class="answer-options">
+        <div class="options" style="background-color: #42b9c8;">
+          <h1 id="option1">1</h1>
+        </div>
+        <div class="options" style="background-color: rgb(163, 55, 55);">
+          <h1 id="option2">2</h1>
+        </div>
+        <div class="options" style="background-color: #413b61;">
+          <h1 id="option3">3</h1>
+        </div>
+      </div>
+  </div>
+
+  <script src="js/suma.js"></script>
+  
+</body>
+</html>
