--- a/div.html
+++ b/div.html
@@ -23,6 +23,7 @@
             <li><a href="res.html">RESTA</a></li>
             <li><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li class="current"><a href="div.html">DIVISIÓN</a></li>
+            <li><a href="index.html">SESIÓN</a></li>
           </ul>
         </nav>
       </div>
