--- a/res.html
+++ b/res.html
@@ -25,6 +25,7 @@
             <li class="current" ><a href="res.html">RESTA</a></li>
             <li><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li><a href="div.html">DIVISIÓN</a></li>
+            <li><a href="index.html">SESIÓN</a></li>
           </ul>
         </nav>
       </div>
