--- a/div.html
+++ b/div.html
@@ -24,6 +24,7 @@
             <li><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li class="current"><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
+            <li><a href="chat.html">CHAT</a></li>
           </ul>
         </nav>
       </div>
