--- a/mult.html
+++ b/mult.html
@@ -26,6 +26,7 @@
             <li class="current"><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
+            <li><a href="chat.html">CHAT</a></li>
           </ul>
         </nav>
       </div>
