--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -29,7 +29,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Nuevo</h1>
+      <h1>Nuevo Jugador(datos)</h1>
       <div class="herramientas">
         <a
           href="alumnos.html">
@@ -41,21 +41,21 @@
     </header>
     <p>
       <label>
-        Matricula
+        Nombre o nick
         <input name="matricula"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Nombre o Nick
+        Edad
         <input name="nombre"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Teléfono
+        Grado
         <input name="telefono"
           type="text" required>
       </label>
