--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </label>
     </p>
     <h2>Hola, bienvenido a KIDS+4 donde podras 
-      aprender de una manera sencilla y divertida.</h2><br>
+      aprender MATEMÁTICAS de una manera sencilla y divertida.</h2><br>
     <h2><span><img src="img/Suma.png" width="690" height="240" ></h2>
     <mi-footer></mi-footer>
   </form>
