--- a/div.html
+++ b/div.html
@@ -25,6 +25,7 @@
             <li class="current"><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
             <li><a href="chat.html">CHAT</a></li>
+            <li><a href="alumnoNuevo.html">REGISTRATE</a></li>
           </ul>
         </nav>
       </div>
