--- a/juego.html
+++ b/juego.html
@@ -27,7 +27,7 @@
             <li><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
             <li><a href="chat.html">CHAT</a></li>
-            <li><a href="alumnoNuevo.html">Registrate</a></li>
+            <li><a href="alumnoNuevo.html">REGISTRATE</a></li>
           </ul>
         </nav>
       </div>
