--- a/alumno.html
+++ b/alumno.html
@@ -49,28 +49,28 @@
     </header>
     <p>
       <label>
-        Matricula
+        Nombre o nick
         <input name="matricula"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Nombre
+        Edad
         <input name="nombre"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Teléfono
+        Grado
         <input name="telefono"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Grupo
+        Pasatiempo Favorito
         <input name="grupo"
           type="text" required>
       </label>
