--- a/indexFX.html
+++ b/indexFX.html
@@ -13,7 +13,8 @@
         <div class="ring"></div>
         <div class="ring"></div>
         <div class="ring"></div>
-        <p>BIENVENIDO A KIDS+4...</p>
+        <p>BIENVENIDO A KIDS+4</p>
+        
 
     </div>
     <a href="index.html" class="btn">  <span>INICIAR SESIÓN</span> </a>
