--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -34,7 +34,7 @@
       <div class="herramientas">
         <a
           href="alumnos.html">
-          Cancelar</a>
+          Jugadores</a>
         <button type="submit">
           Guardar
         </button>
