--- a/alumno.html
+++ b/alumno.html
@@ -34,7 +34,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Alumno</h1>
+      <h1>Jugador</h1>
       <div class="herramientas">
         <a href="alumnos.html">
           Cancelar</a>
