--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -32,10 +32,8 @@
     <header>
       <h1>REGISTRATE</h1>
       <div class="herramientas">
-        <!-- <a
-          href="alumnos.html">
-          Jugadores</a>  se elimina para que los jugadores no 
-          vean a los demas o puedan editarlos-->
+       <a
+          href="juego.html"></a>  
         <button type="submit">
           Guardar
         </button>
