--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -32,9 +32,11 @@
     <header>
       <h1>REGISTRATE</h1>
       <div class="herramientas">
-       <a
-          href="juego.html"></a>  
-        <button type="submit">
+        <!-- <a
+          href="alumnos.html">
+          Jugadores</a>  se elimina para que los jugadores no 
+          vean a los demas o puedan editarlos-->
+        <button type="submit" onclick="location.href='juego.html'">
           Guardar
         </button>
       </div>
