--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,16 +27,16 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form  method="get" action="juego.html">
+  <form method="get" action="juego.html">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
-      
+      <div class="herramientas">
         <!-- <a
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-        <button type="submit" >
+        <button type="submit" name="forma"  >
           Guardar
         </button>
       
