--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form method="get" action="juego.html">
+  <form name="forma">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
@@ -36,10 +36,10 @@
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-        <button type="submit" name="forma"  >
+        <button type="submit" onclick="location.href='juego.html'">
           Guardar
         </button>
-      
+      </div>
     </header>
     <p>
       <label>
