--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form name="forma">
+  <form name="forma" method="get" action="juego.html">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
@@ -36,7 +36,7 @@
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-        <button type="submit" onclick="location.href='juego.html'">
+        <button type="submit" >
           Guardar
         </button>
       </div>
