--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -36,7 +36,7 @@
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-        <button type="submit" >
+        <button type="submit" onclick="location.href='juego.html'" >
           Guardar
         </button>
       </div>
