--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,16 +27,16 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form name="forma">
+  <form name="forma" onclick="location.href='juego.html'">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
-      <div class="herramientas">
+      <div >
         <!-- <a
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-        <button type="submit" onclick="location.href='juego.html'" >
+        <button type="submit"  >
           Guardar
         </button>
       </div>
