--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,11 +27,11 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form name="forma" method="get" action="#">
+  <form name="forma" >
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
-      <div >
+      <div class="herramientas">
         <!-- <a
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
