--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -36,7 +36,7 @@
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-        <button type="submit" name="forma"  onclick="location.href='juego.html'" >
+        <button name="forma"  onclick="location.href='juego.html'" >
           Guardar
         </button>
       </div>
