--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form name="forma" action="juego.html" >
+  <form name="forma" action="juego.html" method="get" >
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
