--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -37,7 +37,7 @@
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
           
-        <button type="submit" >
+        <button type="submit" onclick="location.href='juego.html'" >
           Guardar
         </button>
       </div>
