--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -36,10 +36,11 @@
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
-          
-        <button type="submit" onclick="location.href='juego.html'" >
+          <a href="juego.html">
+        <button type="submit" >
           Guardar
         </button>
+    </a>
       </div>
     </header>
     <p>
