--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form name="forma" method="get" action="juego.html">
+  <form method="get" action="juego.html">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
