--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -31,13 +31,13 @@
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
-      <div class="herramientas">
+      <div name="forma" class="herramientas">
         <!-- <a
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
           
-        <button name="forma" >
+        <button  >
           Guardar
         </button>
     
