--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,19 +27,19 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form method="get" action="juego.html">
+  <form name="forma" method="get" action="juego.html">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
-      <div name="forma" class="herramientas">
+      <div  class="herramientas">
         <!-- <a
           href="alumnos.html">
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
           
-        <button  >
-          Guardar
-        </button>
+          <a href="juego.html">
+            <input type="button" value="click here">
+        </a>
     
       </div>
     </header>
