--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -38,7 +38,7 @@
           vean a los demas o puedan editarlos-->
           
           <a href="juego.html">
-            <input type="button" value="click here">
+            <input type="submit" type="button" value="click here">
         </a>
     
       </div>
