--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form name="forma">
+  <form  name="forma" translate="no">
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
@@ -38,7 +38,7 @@
           vean a los demas o puedan editarlos-->
           
           <a href="juego.html" >
-            <input  type="submit" type="button" value="click here">
+            <input  type="submit" type="button" value="Guardar">
         </a>
     
       </div>
