--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
-  <form  name="forma" translate="no">
+  <form  name="forma" >
     <mi-nav></mi-nav>
     <header>
       <h1>REGISTRATE</h1>
@@ -37,8 +37,8 @@
           Jugadores</a>  se elimina para que los jugadores no 
           vean a los demas o puedan editarlos-->
           
-          <a href="juego.html" >
-            <input  type="submit" type="button" value="Guardar">
+          <a href="#" >
+            <input  onclick="document.location.reload();" type="submit" type="button" value="Guardar">
         </a>
     
       </div>
