--- a/chat.html
+++ b/chat.html
@@ -29,12 +29,15 @@
   <link rel="stylesheet"
     href="css/estilos.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet"
+    href="css1/aside.css">
 </head>
 <body>
   <mi-nav></mi-nav>
   <form name="forma">
     <header>
       <h1>Chat</h1>
+      
       <div class="herramientas">
         <input name="texto"
           required
@@ -54,6 +57,26 @@
     src="js/CtrlChat.js">
     </script>
 </body>
+
+<aside>
+  
+  <p> &#129409;</p>
+  <p>&#127769;</p>
+  <p> &#127877;</p>
+  <p> &#x1F385;</p>
+  <p> &#127918;</p>
+<p>&#x1F3AE;</p>
+<p>&#127932;</p>
+<p> &#x1F3BC;</p>
+<p>&#128008;</p>
+<p>&#x1F408;</p>
+<p>&#128151;</p>
+<p>&#x1F497;</p>
+
+    
+
+  </aside>
+<p>COPIA Y PEGA EMOJIS&#x1F497;</p>
 <footer>
   <ul class="social_icon">
       <li> <a href="https://github.com/ale2360/MathKids.github.io.git" target="blank"><ion-icon name="logo-github"></ion-icon></a></li>
@@ -71,9 +94,11 @@
 
 
   </ul>
- 
+ <p style="font-size:40px">&#129409;</p>
+
 </footer>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </html>
