--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -43,28 +43,28 @@
     <p>
       <label>
         Nombre o nick
-        <input name="matricula"
+        <input name="nick"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Edad
-        <input name="nombre"
+        <input name="edad"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Grado
-        <input name="telefono"
+        <input name="grad"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Pasatiempo favorito
-        <input name="grupo"
+        <input name="pasatiempo"
           type="text" required>
       </label>
     </p>
