--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <p>
       <label>
         Nombre
-        <output name="nombre">
+        <output name="edad">
           <mi-progreso>
           </mi-progreso>
         </output>
