--- a/alumno.html
+++ b/alumno.html
@@ -50,28 +50,28 @@
     <p>
       <label>
         Nombre o nick
-        <input name="matricula"
+        <input name="nick"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Edad
-        <input name="nombre"
+        <input name="edad"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Grado
-        <input name="telefono"
+        <input name="grad"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Pasatiempo Favorito
-        <input name="grupo"
+        <input name="pasatiempo"
           type="text" required>
       </label>
     </p>
