--- a/alumnos.html
+++ b/alumnos.html
@@ -34,9 +34,9 @@
   <header>
     <h1>Jugadores registrados</h1>
     <div class="herramientas">
-      <a
+      <!-- <a
         href="alumnoNuevo.html">
-        Agregar…</a>
+        Agregar…</a> -->
     </div>
   </header>
   <ul id="lista" class="lista">
