--- a/usuarioNuevo.html
+++ b/usuarioNuevo.html
@@ -47,7 +47,7 @@
     </header>
     <p>
       <label>
-        Cue
+        Cuenta gmail.com
         <input name="cue"
           type="email" required>
       </label>
