--- a/juNuevo.html
+++ b/juNuevo.html
@@ -33,7 +33,7 @@
       <h1>Nuevo Jugador(datos)</h1>
       <div class="herramientas">
         <a
-          href="alumnos.html">
+          href="jugadoress.html">
           Jugadores</a>
         <button type="submit">
           Guardar
