--- a/juga.html
+++ b/juga.html
@@ -36,7 +36,7 @@
     <header>
       <h1>Jugador</h1>
       <div class="herramientas">
-        <a href="alumnos.html">
+        <a href="jugadoress.html">
           Cancelar</a>
         <button>Guardar</button>
         <button name="eliminar"
