--- a/indexFX.html
+++ b/indexFX.html
@@ -2,6 +2,9 @@
 <html lang="Es">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport"
+    content="width=device-width,
+       initial-scale=1.0">
 <Title>CSS animacion</Title>
 <link rel="stylesheet" type="text/css" href="Efectos/stylex.css">
 <link rel="stylesheet" type="text/css" href="Efectos/botom.css">
