--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </script>
   <link rel="stylesheet"
     href="css/estilos.css">
+    <link rel="stylesheet"
+    href="img/img.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
