--- a/juego.html
+++ b/juego.html
@@ -21,7 +21,7 @@
         <h2><span><img src="img/Suma.png" width="250" height="100"></h2>
         <nav>
           <ul>
-            <li class="current"><a href="juego.html">SUMA</a></li>
+            <li><a href="juego.html">SUMA</a></li>
             <li><a href="res.html">RESTA</a></li>
             <li><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li><a href="div.html">DIVISIÓN</a></li>
