--- a/div.html
+++ b/div.html
@@ -22,7 +22,7 @@
             <li><a href="juego.html">SUMA</a></li>
             <li><a href="res.html">RESTA</a></li>
             <li><a href="mult.html">MULTIPLICACIÓN</a></li>
-            <li class="current"><a href="div.html">DIVISIÓN</a></li>
+            <li><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
             <li><a href="chat.html">CHAT</a></li>
             <li><a href="RegistroUsuario.html">REGISTRATE</a></li>
