--- a/mult.html
+++ b/mult.html
@@ -23,7 +23,7 @@
           <ul>
             <li><a href="juego.html">SUMA</a></li>
             <li><a href="res.html">RESTA</a></li>
-            <li class="current"><a href="mult.html">MULTIPLICACIÓN</a></li>
+            <li><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
             <li><a href="chat.html">CHAT</a></li>
