--- a/res.html
+++ b/res.html
@@ -22,7 +22,7 @@
         <nav>
           <ul>
             <li><a href="juego.html">SUMA</a></li>
-            <li class="current" ><a href="res.html">RESTA</a></li>
+            <li><a href="res.html">RESTA</a></li>
             <li><a href="mult.html">MULTIPLICACIÓN</a></li>
             <li><a href="div.html">DIVISIÓN</a></li>
             <li><a href="index.html">SESIÓN</a></li>
