--- a/indexFX.html
+++ b/indexFX.html
@@ -5,7 +5,7 @@
 <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-<Title>CSS animacion</Title>
+<Title>KIDS+4</Title>
 <link rel="stylesheet" type="text/css" href="Efectos/stylex.css">
 <link rel="stylesheet" type="text/css" href="Efectos/botom.css">
 </head>
