--- a/indexFX.html
+++ b/indexFX.html
@@ -6,6 +6,7 @@
     content="width=device-width,
        initial-scale=1.0">
 <Title>KIDS+4</Title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="stylesheet" type="text/css" href="Efectos/stylex.css">
 <link rel="stylesheet" type="text/css" href="Efectos/botom.css">
 </head>
