--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet"
     href="img/img.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
  <form name="forma">
