--- a/RegistroUsuario.html
+++ b/RegistroUsuario.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet"
     href="css/estilos.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
   <form name="forma">
