--- a/chat.html
+++ b/chat.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="stylesheet"
     href="css1/aside.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <aside>
   
