--- a/jugadoress.html
+++ b/jugadoress.html
@@ -28,6 +28,7 @@
     </script>
   <link rel="stylesheet"
     href="css/estilos.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
   <mi-nav></mi-nav>
