--- a/usuarios.html
+++ b/usuarios.html
@@ -32,6 +32,7 @@
     </script>
   <link rel="stylesheet"
     href="css/estilos.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
   <mi-nav></mi-nav>
