--- a/calcuDEMO/cal2.html
+++ b/calcuDEMO/cal2.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <LINK REL="stylesheet" TYPE="text/css" HREF="cal.css">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <form name="calculator">
